Fix logo alignment issue for masthead

--- a/app/styles/scss/_masthead.mobile.scss
+++ b/app/styles/scss/_masthead.mobile.scss
@@ -283,7 +283,7 @@
             z-index: 6;
             background-color: #000;
         }
-        .logo-mast {padding-top: 12px}
+        // .logo-mast {padding-top: 12px}
     }
 }
 body.nav_open #contentWrapper,
